--- a/style.css
+++ b/style.css
@@ -1,7 +1,57 @@
 *{
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-h1 {
-    color: red;
+.navigation {
+    background: linear-gradient(indigo,brown,hotpink);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    padding: 15px;
+    box-shadow: 0px 5px 1px rgba(30, 143, 255, 0.441);
+    
+}
+.navigation-menu ul {
+    
+    display: flex;
+   
+}
+
+.navigation-menu ul li {
+
+    list-style-type: none;
+    
+}
+
+.navigation-menu ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 18px 10px;
+
+    /* border-right: 1px solid dodgerblue; */
+    text-align: center;
+    transition: .5s;
+}
+
+/* .navigation-menu ul > .first-border > a {
+
+    border-left: 1px solid dodgerblue;
+} */
+
+.navigation-menu ul > li a:hover {
+
+    background-color: black;
+    color: hotpink;
+    border-radius: 5px;
+    transform: scale(2);
+}
+.menu-toggle {
+    cursor: pointer;
+    font-size: 25px;
+    display: none;
 }
